# android-native-egl-example

./: README.md  local.properties
app/: build.gradle
app/src/androidTest/java/tsaarni/nativeeglexample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/tsaarni.nativeeglexample/: DemoActivity.java  DemoLIB.java  RenderView.java
app/src/main/jni/: CMakeLists.txt  Shader.h  glad.c  jniapi.cpp  jniapi.h  native-lib.cpp  renderer.cpp  renderer.h  rendererES2.cpp  rendererES3.cpp
app/src/main/jni/glad/: glad.h
app/src/main/jni/rendering/: CMakeLists.txt  common.hpp  shader.cpp  shader.hpp  vertexbuf.cpp  vertexbuf.hpp
app/src/main/jni/shaders/: demoshader.fs  demoshader.vs  shader.fs  shader.vs  triv_shader.fs  triv_shader.vs
app/src/main/res/layout/: activity_main.xml  main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/tsaarni/nativeeglexample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
